--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/testdb
+spring.datasource.url=jdbc:postgresql://postgresql.mathiyalagan.svc.cluster.local:5432/testdb
 spring.datasource.username=postgres
 spring.datasource.password=pass@1987
 
